# loud-noise-detector

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  release-please-config.json  requirements.txt  sample.env  setup.py
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  build.yml  ci.yml  nightly.yml  pr-validation.yml  release.yml
config/: default_config.yaml
data/recordings/: .gitkeep
src/: main.py  test_main.py
src/detector/: audio_detector.py  test_audio_detector.py
src/detector/processors/: rms_processor.py  test_rms_processor.py
src/notifiers/: base.py  slack.py  test_slack.py
src/recorders/: base.py  test_wave_recorder.py  wave_recorder.py
src/utils/: config.py  test_config.py
