[tool.poetry]
name = "loud-noise-detector"
version = "2.1.0"
description = "Audio monitoring system that detects and alerts you about important sounds in your home while you're away."
authors = ["Endika Iglesias <endika2@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Endika/loud-noise-detector"
repository = "https://github.com/Endika/loud-noise-detector"
keywords = ["audio", "monitoring", "sound-detection", "pet-care", "baby-monitor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
packages = [{include = "src"}]

[tool.poetry.scripts]
loud-noise-detector = "src.main:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pyaudio = "^0.2.14"
pyyaml = "^6.0.3"
requests = "^2.32.5"
numpy = "^2.0.2"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.3.0"
pytest-benchmark = "^5.2.3"
ruff = "^0.15.9"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["SIM117"]

[tool.coverage.run]
omit = ["*/test_*.py", "*/__init__.py", "*/base.py"]
